# Sylvie

./: .deepsource.toml  .pre-commit-config.yaml  README.md  grammer.txt  pyproject.toml  setup.cfg
.github/workflows/: codeql-analysis.yml  github-pages.yml
docs/: conf.py  index.rst  modules.rst  sylvie.__main__.rst  sylvie.rst  sylvie.syntax_directed.lexer.rst  sylvie.syntax_directed.parser.rst  sylvie.syntax_directed.rst  sylvie.tokens.rst
src/: Sylvie  Sylvie.py
src/sylvie/: __init__.py  __main__.py
src/sylvie/_ast_based/: nodes.py
src/sylvie/_syntax_directed/: lexer.py  parser.py
src/sylvie/interpreter/: tokens.py
src/sylvie/interpreter/ast_based/: nodes.py
src/sylvie/interpreter/syntax_directed/: lexer.py  parser.py
src/sylvie/syntax_directed/: lexer.py  parser.py
sylvie/: __init__.py  __main__.py  bin.py
sylvie/interpreter/: lexer.py  parser.py
