[metadata]
name = Sylvie
version = 0.0.1-beta
author = Aditya Alok
author_email = dev.aditya.alok@gmail.com
description = A mathematical interpreter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MrAdityaAlok/Sylvie
project_urls =
    Bug Tracker = https://github.com/MrAdityaAlok/Sylvie/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
